--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "ajv": "^8.6.2",
+    "ajv-formats": "^2.1.1",
     "fastify-error": "^0.3.1",
     "fastify-plugin": "^3.0.0",
     "graphql": "^15.4.0"
