--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "homepage": "https://github.com/mercurius-js/validation",
   "devDependencies": {
+    "@mercuriusjs/federation": "^1.0.0",
+    "@mercuriusjs/gateway": "^1.0.0",
     "@sinonjs/fake-timers": "^10.0.2",
     "@types/node": "^18.0.0",
     "@types/ws": "^8.5.3",
@@ -42,7 +44,7 @@
     "autocannon": "^7.9.0",
     "concurrently": "^7.2.2",
     "fastify": "^4.2.0",
-    "mercurius": "^11.0.0",
+    "mercurius": "^12.0.0",
     "pre-commit": "^1.2.2",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
