--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "unit": "tap --100 test/*.js",
-    "cov": "tap --coverage-report=html -J test/*.js",
+    "unit": "borp --no-typescript --timeout 300000 --reporter spec 'test/**/*.js'",
+    "cov": "borp --coverage --no-typescript --check-coverage --lines 100 --functions 100 --statements 100 --branches 100 --timeout 300000 --reporter spec 'test/**/*.js'",
     "lint": "npm run lint:standard",
     "lint:standard": "standard | snazzy",
     "lint:typescript": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin index.d.ts test/types/*.ts | snazzy",
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "autocannon": "^8.0.0",
+    "borp": "^0.21.0",
     "concurrently": "^9.0.0",
     "fastify": "^5.0.0",
     "mercurius": "^16.0.0",
