--- a/package.json
+++ b/package.json
@@ -34,32 +34,32 @@
   },
   "homepage": "https://github.com/mercurius-js/validation",
   "devDependencies": {
+    "@fastify/pre-commit": "^2.2.1",
     "@mercuriusjs/federation": "^5.0.0",
     "@mercuriusjs/gateway": "^5.0.0",
-    "@sinonjs/fake-timers": "^11.2.2",
-    "@types/node": "^25.0.2",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@sinonjs/fake-timers": "^15.0.0",
+    "@types/node": "^25.0.3",
+    "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "autocannon": "^8.0.0",
     "borp": "^0.21.0",
-    "concurrently": "^9.0.0",
-    "fastify": "^5.0.0",
-    "mercurius": "^16.0.0",
-    "pre-commit": "^1.2.2",
+    "concurrently": "^9.2.1",
+    "fastify": "^5.6.2",
+    "mercurius": "^16.6.0",
     "snazzy": "^9.0.0",
-    "standard": "^17.1.0",
-    "tsd": "^0.32.0",
-    "typescript": "^5.4.2",
-    "wait-on": "^8.0.0"
+    "standard": "^17.1.2",
+    "tsd": "^0.33.0",
+    "typescript": "^5.9.3",
+    "wait-on": "^9.0.3"
   },
   "dependencies": {
-    "@fastify/error": "^4.0.0",
-    "ajv": "^8.6.2",
+    "@fastify/error": "^4.2.0",
+    "ajv": "^8.17.1",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
-    "fastify-plugin": "^5.0.1",
-    "graphql": "^16.2.0"
+    "fastify-plugin": "^5.1.0",
+    "graphql": "^16.12.0"
   },
   "tsd": {
     "directory": "./test/types"
@@ -67,5 +67,8 @@
   "directories": {
     "lib": "lib",
     "test": "test"
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
